--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Get to Know<span class="text-about">Me</span></h2>
-                        <p class="about__text">I am current pursuing B-Tech in Smart manufacturing at IIIT D&M, Kancheepuram. I'm more intersted towards problem solving and interested to solve real-life problems. I'm much more involved in competitive programming, participating in several coding competition.</p>           
+                        <p class="about__text">I am currently pursuing B-Tech in Smart manufacturing at IIIT D&M, Kancheepuram. I'm more intersted towards problem solving and interested to solve real-life problems. I'm much more involved in competitive programming, participating in several coding competition.</p>           
                     </div>                                   
                 </div>
             </section>
